--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
+    
+    
+    <button type="button" class="load-more" hidden>Load more</button>
 
     <!-- Картка зображення -->
     <!-- <div class="photo-card">
