--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       <!-- Картки зображень -->
     </div>
 
+    <div class="js-guard"></div>
     <button type="button" class="load-more" hidden>Load more</button>
 
     <script type="module" src="./index.js"></script>
